@@ -6,15 +6,13 @@ require_once( dirname(__FILE__).'/includes/ProfilerStub.php' );
  * To use a profiler, copy this file to StartProfiler.php,
  * delete the PHP line above, and add something like this:
  *
- *   require_once(  dirname(__FILE__).'/includes/Profiler.php' );
- *   $wgProfiler = new Profiler;
+ *   $wgProfiler['class'] = 'Profiler';
  *
  * Or for a sampling profiler:
  *   if ( !mt_rand( 0, 100 ) ) {
- *       require_once(  dirname(__FILE__).'/includes/Profiler.php' );
- *       $wgProfiler = new Profiler;
+ *       $wgProfiler['class'] = 'Profiler';
  *   } else {
- *       require_once(  dirname(__FILE__).'/includes/ProfilerStub.php' );
+ *       $wgProfiler['class'] = 'ProfilerStub';
  *   }
  * 
  * Configuration of the profiler output can be done in LocalSettings.php
