@@ -4,10 +4,6 @@
  * @ingroup Profiler
  */
 
-if ( !class_exists( 'ProfilerSimple' ) ) {
-	require_once( dirname( __FILE__ ) . '/ProfilerSimple.php' );
-}
-
 /**
  * Execution trace
  * @todo document methods (?)
